--- a/Implementation/WebTier/WebContent/JavaScript/Source/JsUnit/app/emptyPage.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/JsUnit/app/emptyPage.html
@@ -9,6 +9,7 @@
    <meta http-equiv="Last-Modified" content="01 Jan 1970 00:00:00 GMT" /> 
    <meta http-equiv="If-Modified-Since" content="01 Jan 1970 00:00:00 GMT" />    
    <title>emptyPage</title>
+   <script type="text/javascript" src="../../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
 </head>
 
 <body bgcolor="#FFFFFF">
