correct faults in JsUnit

--- a/Implementation/WebTier/WebContent/JavaScript/Source/JsUnit/app/testContainer.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/JsUnit/app/testContainer.html
@@ -8,7 +8,7 @@
 </head>
 <frameset rows="0, *" border="0">
     <frame name="testContainerController" src="testContainerController.html">
-    <frame name="testFrame" src="emptyPage.html">
+    <frame name="testFrame" src="./emptyPage.html">
     <noframes>
         <body>
         <p>Sorry, JsUnit requires frames.</p>
