--- a/Implementation/WebTier/WebContent/JavaScript/Source/BrowserWidget/BrowserWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/BrowserWidget/BrowserWidgetTest.html
@@ -5,7 +5,6 @@
    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
    <link rel="stylesheet" type="text/css" href="../JsUnit/css/jsUnitStyle.css">
-   <script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>
 
    <!--[if IE]>
       <script type="text/javascript" src="../../Libraries/MochaUI/excanvas.js"></script>
@@ -15,6 +14,9 @@
    <script type="text/javascript" src="../../Libraries/Log4JavaScript/log4javascript.js"></script>
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
+   <script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>
+   <script type="text/javascript" src="../JsUnit/app/JsTestCase.js"></script>
+   <script type="text/javascript" src="../JsUnit/app/JsTestFunction.js"></script>
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlIO.js"></script>
