--- a/Implementation/WebTier/WebContent/JavaScript/Source/ComponentStateManager/ComponentStateManagerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/ComponentStateManager/ComponentStateManagerTest.html
@@ -6,10 +6,15 @@
    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
    <link type="text/css" rel="stylesheet" href="../JsUnit/app/css/jsUnitStyle.css">
-   <script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>
    
    <script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
+   <script type="text/javascript" src="../../Libraries/JsMockito/JsMockito.js"></script>
+   <script type="text/javascript" src="../../Libraries/Log4JavaScript/log4javascript.js"></script>
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
+   <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
+   <script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>
+   <script type="text/javascript" src="../JsUnit/app/JsTestCase.js"></script>
+   <script type="text/javascript" src="../JsUnit/app/JsTestFunction.js"></script>
 
    <script type="text/javascript" src="../Singleton/Singleton.js"></script>
    
