--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Internationalization/LocaleTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Internationalization/LocaleTest.html
@@ -20,8 +20,8 @@
    <script type="text/javascript" src="../../JsUnit/app/JsTestCase.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestFunction.js"></script>
 
-   <script type="text/javascript"  src="../FundamentalTypes/StringTokenizer.js"></script>
-   <script type="text/javascript"  src="../Internationalization/Locale.js"></script>
+   <script type="text/javascript"  src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
+   <script type="text/javascript"  src="../../Source/Internationalization/Locale.js"></script>
 
    <script type="text/javascript" >
 		window.addEvent('domready', function() {
