--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/AbstractDocument/AbstractDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/AbstractDocument/AbstractDocumentTest.html
@@ -8,6 +8,10 @@
 	
    <link rel="stylesheet" type="text/css" href="../../JsUnit/css/jsUnitStyle.css">
    
+   <script type="text/javascript">
+      var contextRootPrefix = "../../../";
+   </script>
+   
    <script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
    <script type="text/javascript" src="../../Libraries/Log4JavaScript/log4javascript.js"></script>
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
