--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ComponentStateManager/ComponentStateManagerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ComponentStateManager/ComponentStateManagerTest.html
@@ -7,6 +7,10 @@
 
    <link rel="stylesheet" type="text/css" href="../../JsUnit/css/jsUnitStyle.css">
    
+   <script type="text/javascript">
+      var contextRootPrefix = "../../../";
+   </script>
+   
    <!--[if IE]>
       <script type="text/javascript" src="../../Libraries/MochaUI/excanvas.js"></script>
    <![endif]-->  
