--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DocumentManager/DocumentManagerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DocumentManager/DocumentManagerTest.html
@@ -5,6 +5,10 @@
    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
    <link rel="stylesheet" type="text/css" href="../../JsUnit/css/jsUnitStyle.css">
    
+   <script type="text/javascript">
+      var contextRootPrefix = "../../../";
+   </script>
+   
    <!--[if IE]>
       <script type="text/javascript" src="../../Libraries/MochaUI/excanvas.js"></script>
    <![endif]-->  
