--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html
@@ -1,12 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Test page for HierarchicalMenuWiget.js</title>
-
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+   <title>Test page for HierarchicalMenuWiget.js</title>
+   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
    <link type="text/css" rel="stylesheet" href="../HierarchicalMenuWidget/VerticalLayout.css">
    <link rel="stylesheet" type="text/css" href="../../JsUnit/css/jsUnitStyle.css">
+   
+   <script type="text/javascript">
+      var contextRootPrefix = "../../../";
+   </script>
    
    <!--[if IE]>
       <script type="text/javascript" src="../../Libraries/MochaUI/excanvas.js"></script>
