--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TabWidget/TabTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TabWidget/TabTest.html
@@ -8,6 +8,10 @@
    <link rel="stylesheet" type="text/css" href="../TabWidget/tab.css">
    <link rel="stylesheet" type="text/css" href="../../JsUnit/css/jsUnitStyle.css">
    
+   <script type="text/javascript">
+      var contextRootPrefix = "../../../";
+   </script>
+   
    <!--[if IE]>
       <script type="text/javascript" src="../../Libraries/MochaUI/excanvas.js"></script>
    <![endif]-->  
