--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SkinSelectorWidget/SkinSelectorWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SkinSelectorWidget/SkinSelectorWidgetTest.html
@@ -22,6 +22,7 @@
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/jsUnitCore.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestCase.js"></script>
+   <script type="text/javascript" src="../../JsUnit/app/JsTestClass.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestFunction.js"></script>
 
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
@@ -59,6 +60,8 @@
    <script type="text/javascript" src="../../Source/SkinSelectorWidget/SkinChangedMessage.js"></script>
    <script type="text/javascript" src="../../Source/SkinSelectorWidget/SkinSelectorWidget.js"></script>
 
+   <script type="text/javascript" src="../../ObjectTests/SkinSelectorWidget/SkinSelectorWidgetTest.js"></script>
+   
    <script type="text/javascript">
    window.addEvent('domready', function() {
       runTestFunction();
