Correct flaws in SmartDocument tests.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/CompositeDocumentElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/CompositeDocumentElementTest.html
@@ -26,6 +26,7 @@
    <script type="text/javascript" src="../../JsUnit/app/JsTestCase.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestFunction.js"></script>
 
+   <script type="text/javascript" src="../../Libraries/RemoteStyleSheet/RemoteStyleSheet.js"></script>  
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlIO.js"></script>
