--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentElementEditorTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentElementEditorTest.html
@@ -66,6 +66,7 @@
    <script type="text/javascript" src="../../Source/ResourceManager/ResourceManager.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/UndefinedDocumentResourceException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditor.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditorFactory.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementFactory.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentPlugin.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
