--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
@@ -33,11 +33,11 @@
          newsuite.addTestPage("../ObjectTests/SmartDocument/SmartDocumentTestSuite.html");
          newsuite.addTestPage("../ObjectTests/TabWidget/TabWidgetTestSuite.html");
          newsuite.addTestPage("../ObjectTests/TextAreaEditor/TextAreaEditorTestSuite.html");
-//          newsuite.addTestPage("../ObjectTests/ToolBarWidget/ToolBarWidgetTestSuite.html");
-//          newsuite.addTestPage("../ObjectTests/WebUIConfiguration/WebUIConfigurationTest.html");
-//          newsuite.addTestPage("../ObjectTests/WebUIController/WebUIControllerTest.html");
-//          newsuite.addTestPage("../ObjectTests/WebUILogger/WebUILoggerTest.html");
-//          newsuite.addTestPage("../ObjectTests/WebUIMessageBus/WebUIMessageBusTest.html");
+         newsuite.addTestPage("../ObjectTests/ToolBarWidget/ToolBarWidgetTestSuite.html");
+         newsuite.addTestPage("../ObjectTests/WebUIConfiguration/WebUIConfigurationTest.html");
+         newsuite.addTestPage("../ObjectTests/WebUIController/WebUIControllerTest.html");
+         newsuite.addTestPage("../ObjectTests/WebUILogger/WebUILoggerTest.html");
+         newsuite.addTestPage("../ObjectTests/WebUIMessageBus/WebUIMessageBusTest.html");
          return newsuite;
       }
 	</script>
