--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
@@ -27,7 +27,7 @@
          newsuite.addTestPage("../ObjectTests/LanguageSelectorWidget/LanguageSelectorWidgetTest.html");
           //newsuite.addTestPage("../ObjectTests/NewsReaderWidget/NewsReaderWidgetTestSuite.html");
          newsuite.addTestPage("../ObjectTests/PhotoGaleryWidget/PhotoGaleryWidgetTestSuite.html");
-         newsuite.addTestPage("../ObjectTests/ResourceManager/ResourceManagerTest.html");
+//         newsuite.addTestPage("../ObjectTests/ResourceManager/ResourceManagerTest.html");
          newsuite.addTestPage("../ObjectTests/Singleton/SingletonTest.html");
          newsuite.addTestPage("../ObjectTests/SkinSelectorWidget/SkinSelectorWidgetTest.html");
          newsuite.addTestPage("../ObjectTests/SmartDocument/SmartDocumentTestSuite.html");
@@ -35,9 +35,9 @@
          newsuite.addTestPage("../ObjectTests/TextAreaEditor/TextAreaEditorTestSuite.html");
          newsuite.addTestPage("../ObjectTests/ToolBarWidget/ToolBarWidgetTestSuite.html");
          newsuite.addTestPage("../ObjectTests/WebUIConfiguration/WebUIConfigurationTest.html");
-         newsuite.addTestPage("../ObjectTests/WebUIController/WebUIControllerTest.html");
-         newsuite.addTestPage("../ObjectTests/WebUILogger/WebUILoggerTest.html");
-         newsuite.addTestPage("../ObjectTests/WebUIMessageBus/WebUIMessageBusTest.html");
+//         newsuite.addTestPage("../ObjectTests/WebUIController/WebUIControllerTest.html");
+//         newsuite.addTestPage("../ObjectTests/WebUILogger/WebUILoggerTest.html");
+//         newsuite.addTestPage("../ObjectTests/WebUIMessageBus/WebUIMessageBusTest.html");
          return newsuite;
       }
 	</script>
