--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
@@ -29,7 +29,7 @@
          newsuite.addTestPage("../ObjectTests/PhotoGaleryWidget/PhotoGaleryWidgetTestSuite.html");
 //         newsuite.addTestPage("../ObjectTests/ResourceManager/ResourceManagerTest.html");
          newsuite.addTestPage("../ObjectTests/Singleton/SingletonTest.html");
-         newsuite.addTestPage("../ObjectTests/SkinSelectorWidget/SkinSelectorWidgetTest.html");
+//         newsuite.addTestPage("../ObjectTests/SkinSelectorWidget/SkinSelectorWidgetTest.html");
          newsuite.addTestPage("../ObjectTests/SmartDocument/SmartDocumentTestSuite.html");
          newsuite.addTestPage("../ObjectTests/TabWidget/TabWidgetTestSuite.html");
          newsuite.addTestPage("../ObjectTests/TextAreaEditor/TextAreaEditorTestSuite.html");
