--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/BrowserWidget/BrowserWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/BrowserWidget/BrowserWidgetTest.html
@@ -11,6 +11,7 @@
    <![endif]-->  
    
    <script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
+   <script type="text/javascript" src="../../Libraries/JsMockito/JsMockito.js"></script>
    <script type="text/javascript" src="../../Libraries/Log4JavaScript/log4javascript.js"></script>
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
