--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopFooterTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopFooterTest.html
@@ -23,6 +23,7 @@
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/jsUnitCore.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestCase.js"></script>
+   <script type="text/javascript" src="../../JsUnit/app/JsTestClass.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestFunction.js"></script>
 
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
@@ -38,6 +39,11 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
 	
    <script type="text/javascript" src="../../Source/AbstractDocument/AbstractDocument.js"></script>
+   <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
+   <script type="text/javascript" src="../../Source/ComponentStateManager/ComponentStateManager.js"></script>
+   <script type="text/javascript" src="../../Source/Desktop/DesktopElement.js"></script>
+   <script type="text/javascript" src="../../Source/Desktop/DesktopDocument.js"></script>
+   <script type="text/javascript" src="../../Source/Desktop/DesktopFooter.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/IllegalArgumentException.js"></script>
@@ -65,59 +71,21 @@
    <script type="text/javascript" src="../../Source/SmartDocument/SmartDocument.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUILogger/WebUILogger.js"></script>
+   <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessageBus.js"></script>
 	
+   <script type="text/javascript" src="../../ObjectTests/Desktop/DesktopFooterTest.js"></script>
+   
    <script type="text/javascript">
       window.addEvent('domready', function() {
-         //runTestFunction();
 		});
 				
 		JsHamcrest.Integration.JsUnit();
-		
-		var CONFIGURATION_URI = "../Desktop/WebUIConfiguration.xml";
-		var DOCUMENT_CONTENT_URI = "../SmartDocument/SampleDocumentContent.xml";
-		var DOCUMENT_DEFINITION_URI = "../SmartDocument/SmartDocumentDefinition.xml";
-		
-		var documentDefinition = null;
-		var documentHeader = null;
-		var headerDefinition = null;
-		
-      function setUp(){
-         webUIConfiguration = new WebUIConfiguration( CONFIGURATION_URI );
-         webUILogger = new WebUILogger( webUIConfiguration );
-         bundle = new XMLResourceBundle( webUIConfiguration );
-         bundle.load( new Locale({ language : "en" }) );
-           
-         documentDefinition = new XmlResource( DOCUMENT_DEFINITION_URI );
-         headerDefinition = documentDefinition.selectNode( "/smartDocumentDefinition/documentHeader" );
-         documentHeader = new DocumentHeader( headerDefinition, bundle );
-      }
-
-		function tearDown(){
-		   if( documentHeader.getState() > DocumentElement.States.INITIALIZED ) documentHeader.destroy();
-         documentHeader = null;
-		}
-		
-		function testInitialize() {
-			assertThat( documentHeader, not( nil() ));
-			assertThat( documentHeader.getDefinitionElement(), not( nil() ));
-		}
-		
-		function testUnmarshall_DeterminesHeaderProperties(){
-		}
-		
-		//runs a test function during debugging
-		function runTestFunction(){
-			setUp();
-			testInitialize();
-			tearDown();
-		}
-    </script>
+	</script>
 </head>
 
 <body>
 	<h1>DocumentHeader.js test page</H1>
 	<p>This page contains tests for DocumentHeader.js JavaScript class.</P>
-	<div id="SmartDocument">SmartDocument container.</div>
-	<div id="JavaScriptLogging"></div>
+	<div id="Desktop"></div>
 </body>
 </html>
