Extract DesktopPanelTest into it's own .js file.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelTest.html
@@ -23,6 +23,7 @@
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/jsUnitCore.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestCase.js"></script>
+   <script type="text/javascript" src="../../JsUnit/app/JsTestClass.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestFunction.js"></script>
 
    <script type="text/javascript" src="../../Libraries/MochaUI/Core.js"></script>
@@ -115,308 +116,14 @@
    <script type="text/javascript" src="../../Source/WebUILogger/WebUILogger.js"></script>
    <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessageBus.js"></script>
 
-<script type="text/javascript">
-   window.addEvent( 'domready', function() {
-//      test_initialize_linksToRelatedComponentsAndSetsState();
-//      test_unmarshall_determinesDocumentProperties();
-//      test_construct_instantiatesMUIPanel();
-//      test_construct_constructsHeaderWithPlugin();
-//      test_construct_constructsSmartDocument();
-//      test_construct_whenSpecified_subscribesForMenuSelectedMessage();
-//      test_webUIMessageHandler_whenLoadDocumentReceived_loadsHtmlDocument();
-   });
+   <script type="text/javascript" src="../../ObjectTests/Desktop/DesktopPanelTest.js"></script>
+   
+   <script type="text/javascript">
+      window.addEvent( 'domready', function() {
+      });
 
    JsHamcrest.Integration.JsUnit();
    JsMockito.Integration.JsUnit();
-
-   var DESKTOP_CONFIGURATION_URI = "../Desktop/Skins/ProcessPuzzle/DesktopConfiguration.xml";
-   var DESKTOP_CONTAINER_ID = "desktop";
-   var COLUMN_DEFINITION = "/desktopConfiguration/columns/column[@name='mainColumn']";
-   var HTML_DOCUMENT_URI = "../Desktop/HtmlDocument.xml";
-   var SMART_DOCUMENT_URI = "../Desktop/StaticDocument.xml";
-   var PANEL_DEFINITION = "/desktopConfiguration/panels/panel[@name='documents-panel']";
-   var PANEL_DOCUMENT_WRAPPER_ID = "panelDocumentWrapper";
-   var PAGE_WRAPPER_ID = "pageWrapper";
-   var WEBUI_CONFIGURATION_URI = "../Desktop/WebUIConfiguration.xml";
-
-   var column;
-   var columnDefinition;
-   var componentStateManager;
-   var desktopContainerElement;
-   var desktopDefinition;
-   var loadedDocumentUri;
-   var panelDefinition;
-   var pageWrapperElement;
-   var panel;
-   var resourceBundle;
-   var testCaseChain = new Chain();
-   var testCaseIsRunning = false;
-   var toolBox;
-   var webUIConfiguration;
-   var webUIController;
-   var webUILogger;
-   var webUIMessageBus;
-
-   function runTestCase(){
-      if( !testCaseIsRunning ) testCaseChain.callChain();
-   }
-   
-   function beforeEachTest() {
-      inform( "beforeEachTest" );
-      webUIConfiguration = new WebUIConfiguration( WEBUI_CONFIGURATION_URI );
-      webUILogger = new WebUILogger( webUIConfiguration );
-      webUIMessageBus = new WebUIMessageBus();
-      resourceBundle = new XMLResourceBundle( webUIConfiguration );
-      resourceBundle.load( new Locale({ language : "hu" }) );
-      componentStateManager = new ComponentStateManager();
-
-      desktopDefinition = new XmlResource( DESKTOP_CONFIGURATION_URI, { nameSpaces : "xmlns:dc='http://www.processpuzzle.com/DesktopConfiguration'"} );
-      columnDefinition = desktopDefinition.selectNode( COLUMN_DEFINITION );
-      column = new DesktopColumn( columnDefinition, { componentContainerId : PAGE_WRAPPER_ID } );
-      panelDefinition = desktopDefinition.selectNode( PANEL_DEFINITION );
-      panel = new DesktopPanel( panelDefinition, resourceBundle, { componentContainerId : PAGE_WRAPPER_ID, onConstructed : onPanelConstructed, onDocumentLoaded : onDocumentLoaded } );
-      desktopContainerElement = $( DESKTOP_CONTAINER_ID );
-      pageWrapperElement = $( PAGE_WRAPPER_ID );
-
-      testCaseIsRunning = true;
-      testCaseChain.callChain();
-   }
-
-   function constructPanel() {
-      column.unmarshall();
-      panel.unmarshall();
-      MUI.myChain = new Chain();
-      MUI.myChain.chain( function() {
-         MUI.Desktop.initialize( {
-            desktop : DESKTOP_CONTAINER_ID,
-            pageWrapper : PAGE_WRAPPER_ID} );
-      });
-      MUI.myChain.callChain();
-      column.construct();
-      panel.construct();
-   }
-
-   function onDocumentLoaded( documentUri ) {
-      loadedDocumentUri = documentUri;
-      testCaseChain.callChain();
-   }
-
-   function onPanelConstructed() {
-      testCaseChain.callChain();
-   }
-
-   function afterEachTest() {
-      desktopDefinition.release();
-      panel.destroy();
-      column.destroy();
-      webUIMessageBus.tearDown();
-      desktopContainerElement = null;
-      loadedDocumentUri = null;
-
-      inform( "afterEachTest" );
-      testCaseIsRunning = false;
-      testCaseChain.callChain();
-   }
-
-   function test_initialize_linksToRelatedComponentsAndSetsState() {
-      testCaseChain.chain( 
-         beforeEachTest, 
-         function() {
-            assertThat( panel.getLogger(), equalTo( webUILogger ) );
-            assertThat( panel.getMessageBus(), equalTo( webUIMessageBus ) );
-            assertThat( panel.getComponentStateManager(), equalTo( componentStateManager ) );
-            assertThat( panel.getState(), equalTo( DesktopElement.States.INITIALIZED ) );
-            testCaseChain.callChain();
-         }, 
-         afterEachTest 
-      );
-      runTestCase();
-   }
-   
-   function test_unmarshall_setsState() {
-      testCaseChain.chain( 
-         beforeEachTest, 
-         function() {
-            panel.unmarshall();
-            assertThat( panel.getState(), equalTo( DesktopElement.States.UNMARSHALLED ) );
-            testCaseChain.callChain();
-         }, 
-         afterEachTest
-      );
-      runTestCase();
-   }
-
-   function test_unmarshall_determinesPanelProperties() {
-      testCaseChain.chain( 
-         beforeEachTest, 
-         function() {
-            panel.unmarshall();
-            assertThat( panel.getColumnReference(), equalTo( desktopDefinition.selectNode( PANEL_DEFINITION + "/@columnReference" ).value ) );
-            assertThat( panel.getContentUrl(), equalTo( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/contentURL" ) ) );
-            assertThat( panel.getHeight(), equalTo( desktopDefinition.selectNode( PANEL_DEFINITION + "/@height" ).value ) );
-            assertThat( panel.getName(), equalTo( desktopDefinition.selectNode( PANEL_DEFINITION + "/@name" ).value ) );
-            assertThat( panel.getPlugin(), nil() );
-            assertThat( panel.getToolBox(), not( nil() ) );
-            assertThat( panel.getShowHeader(), equalTo( parseBoolean( desktopDefinition.selectNode( PANEL_DEFINITION + "/@showHeader" ).value ) ) );
-            assertThat( panel.getTitle(), equalTo( resourceBundle.getText( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/title" ) ) ) );
-            testCaseChain.callChain();
-         }, 
-         afterEachTest
-      );
-      runTestCase();
-   }
-
-   function test_unmarshall_unmarshallsPanelHeader() {
-      testCaseChain.chain( 
-         beforeEachTest, 
-         function() {
-            panel.unmarshall();
-
-            assertThat( panel.getHeader(), not( nil() ) );
-            assertThat( panel.getHeader().getState(), equalTo( DesktopPanelHeader.States.UNMARSHALLED ) );
-            testCaseChain.callChain();
-         }, 
-         afterEachTest
-      );
-      runTestCase();
-   }
-
-   function test_unmarshall_determinesDocumentProperties() {
-      testCaseChain.chain( 
-         beforeEachTest, 
-         function() {
-            panel.unmarshall();
-            assertThat( panel.getDocument(), not( nil() ) );
-            assertThat( instanceOf( panel.getDocument(), SmartDocument ), is( true ) );
-            assertThat( panel.getDocumentDefinitionUri(), equalTo( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/document/documentDefinitionUri" ) ) );
-            assertThat( panel.getDocumentContentUri(), equalTo( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/document/documentContentUri" ) ) );
-            assertThat( panel.getDocumentWrapperId(), equalTo( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/document/@id" ) ) );
-            assertThat( panel.getDocumentWrapperStyle(), equalTo( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/document/@elementStyle" ) ) );
-            assertThat( panel.getDocumentWrapperTag(), equalTo( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/document/@tag" ) ) );
-            testCaseChain.callChain();
-         }, 
-         afterEachTest
-      );
-      runTestCase();
-   }
-
-   function test_construct_instantiatesMUIPanel() {
-      testCaseChain.chain( 
-         beforeEachTest, 
-         constructPanel, 
-         function() {
-            //after documentLoaded event
-            assertThat( panel.getMUIPanel(), not( nil() ) );
-         },
-         function(){
-            //after panelConstructed event
-            testCaseChain.callChain();
-         },
-         afterEachTest
-      );
-      runTestCase();
-   }
-
-   function test_construct_constructsHeaderWithPlugin() {
-      testCaseChain.chain( 
-         beforeEachTest, 
-         constructPanel, 
-         function() {
-            //after documentLoaded event
-            assertThat( panel.getHeader().getState(), equalTo( DesktopPanelHeader.States.CONSTRUCTED ) );
-         }, 
-         function(){
-            //after panelConstructed event
-            assertThat( panel.getState(), equalTo( DesktopElement.States.CONSTRUCTED ));
-            testCaseChain.callChain();
-         },
-         afterEachTest
-      );
-      runTestCase();
-   }
-
-   function test_construct_constructsSmartDocument() {
-      testCaseChain.chain( 
-         beforeEachTest, 
-         constructPanel, 
-         function() {
-            //after documentLoaded event
-            assertThat( panel.getDocument(), not( nil() ) );
-            assertThat( $( PANEL_DOCUMENT_WRAPPER_ID ), not( nil() ) );
-         },
-         function(){
-            //after panelConstructed event
-            testCaseChain.callChain();
-         },
-         afterEachTest 
-      );
-      runTestCase();
-   }
-      
-   function test_construct_whenSpecified_subscribesForMenuSelectedMessage(){
-      testCaseChain.chain( 
-         beforeEachTest,
-         function(){
-            panel.options.handleDocumentLoadEvents = true;
-            constructPanel();
-         },
-         function(){
-            //documentLoaded event was fired
-         },
-         function() {
-            assertThat( webUIMessageBus.getSubscribersToMessage( MenuSelectedMessage ).contains( panel.webUIMessageHandler ), is( true ));
-            testCaseChain.callChain();
-         },
-         afterEachTest
-      );
-      runTestCase();
-   }
-
-   function test_webUIMessageHandler_whenLoadDocumentReceived_loadsHtmlDocument(){
-      testCaseChain.chain( 
-         beforeEachTest,
-         function(){
-            panel.options.handleDocumentLoadEvents = true;
-            constructPanel();
-         },
-         function(){
-            assertThat( loadedDocumentUri, equalTo( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/document/documentDefinitionUri" ) ) );
-         },
-         function(){
-            var message = new MenuSelectedMessage({ activityType : AbstractDocument.Activity.LOAD_DOCUMENT, documentType : AbstractDocument.Types.HTML, documentURI : HTML_DOCUMENT_URI });
-            webUIMessageBus.notifySubscribers( message );
-         },
-         function() {
-            assertThat( panel.getDocumentDefinitionUri(), equalTo( HTML_DOCUMENT_URI ));
-            testCaseChain.callChain();
-         },
-         afterEachTest
-      );
-      runTestCase();
-   }
-
-   function test_webUIMessageHandler_whenLoadDocumentReceived_loadsSmartDocument(){
-      testCaseChain.chain( 
-         beforeEachTest,
-         function(){
-            panel.options.handleDocumentLoadEvents = true;
-            constructPanel();
-         },
-         function(){
-            assertThat( loadedDocumentUri, equalTo( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/document/documentDefinitionUri" ) ) );
-         },
-         function(){
-            var message = new MenuSelectedMessage({ activiyType : AbstractDocument.Activity.LOAD_DOCUMENT, documentType : AbstractDocument.Types.SMART, documentURI : SMART_DOCUMENT_URI });
-            webUIMessageBus.notifySubscribers( message );
-         },
-         function() {
-            assertThat( panel.getDocumentDefintionUri(), equalTo( SMART_DOCUMENT_URI ));
-            testCaseChain.callChain();
-         },
-         afterEachTest
-      );
-      runTestCase();
-   }
 
 </script>
 </head>
