Extract SmartDocumentTest into it's own .js file.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
@@ -21,23 +21,23 @@
          newsuite.addTestPage("../ObjectTests/ComponentStateManager/ComponentStateManagerTest.html");
          newsuite.addTestPage("../ObjectTests/Desktop/DesktopTestSuite.html");
          newsuite.addTestPage("../ObjectTests/FundamentalTypes/FundamentalTypesTestSuite.html");
-//         newsuite.addTestPage("../ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html");
+         newsuite.addTestPage("../ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html");
          newsuite.addTestPage("../ObjectTests/HtmlDocument/HtmlDocumentTest.html");
          newsuite.addTestPage("../ObjectTests/Internationalization/InternalizationTestSuite.html");
          newsuite.addTestPage("../ObjectTests/LanguageSelectorWidget/LanguageSelectorWidgetTest.html");
           //newsuite.addTestPage("../ObjectTests/NewsReaderWidget/NewsReaderWidgetTestSuite.html");
          newsuite.addTestPage("../ObjectTests/PhotoGaleryWidget/PhotoGaleryWidgetTestSuite.html");
-//         newsuite.addTestPage("../ObjectTests/ResourceManager/ResourceManagerTest.html");
+         newsuite.addTestPage("../ObjectTests/ResourceManager/ResourceManagerTest.html");
          newsuite.addTestPage("../ObjectTests/Singleton/SingletonTest.html");
-//         newsuite.addTestPage("../ObjectTests/SkinSelectorWidget/SkinSelectorWidgetTest.html");
-//         newsuite.addTestPage("../ObjectTests/SmartDocument/SmartDocumentTestSuite.html");
-//         newsuite.addTestPage("../ObjectTests/TabWidget/TabWidgetTestSuite.html");
+         newsuite.addTestPage("../ObjectTests/SkinSelectorWidget/SkinSelectorWidgetTest.html");
+         newsuite.addTestPage("../ObjectTests/SmartDocument/SmartDocumentTestSuite.html");
+         newsuite.addTestPage("../ObjectTests/TabWidget/TabWidgetTestSuite.html");
          newsuite.addTestPage("../ObjectTests/TextAreaEditor/TextAreaEditorTestSuite.html");
-//         newsuite.addTestPage("../ObjectTests/ToolBarWidget/ToolBarWidgetTestSuite.html");
+         newsuite.addTestPage("../ObjectTests/ToolBarWidget/ToolBarWidgetTestSuite.html");
          newsuite.addTestPage("../ObjectTests/WebUIConfiguration/WebUIConfigurationTest.html");
 //         newsuite.addTestPage("../ObjectTests/WebUIController/WebUIControllerTest.html");
-//         newsuite.addTestPage("../ObjectTests/WebUILogger/WebUILoggerTest.html");
-//         newsuite.addTestPage("../ObjectTests/WebUIMessageBus/WebUIMessageBusTest.html");
+         newsuite.addTestPage("../ObjectTests/WebUILogger/WebUILoggerTest.html");
+         newsuite.addTestPage("../ObjectTests/WebUIMessageBus/WebUIMessageBusTest.html");
          return newsuite;
       }
 	</script>
