--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/WebUIController/WebUIControllerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/WebUIController/WebUIControllerTest.html
@@ -143,6 +143,8 @@
 </head>
 
 <body>
+   <h1>WebUIController.js test page</H1>
+   <p>This page contains tests for WebUIController.js JavaScript class.</P>
 	<div id='desktopContainer'></div>
 </body>
 </html>
