--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopDocumentTest.html
@@ -80,6 +80,7 @@
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentScript.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentStyleSheet.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/ResourceManager.js"></script>
+   <script type="text/javascript" src="../../Source/ResourceManager/UndefinedDocumentResourceException.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUIController/WebUIController.js"></script>
    <script type="text/javascript" src="../../Source/WebUILogger/WebUILogger.js"></script>
