--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
@@ -51,6 +51,7 @@
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/ComponentStateManager.js"></script>
+   <script type="text/javascript" src="../../Source/DiagramWidget/AttributeFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/DiagramFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/DiagramFigureFactory.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/ClassFigure.js"></script>
