Add DiagramWidget example.

--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -13,7 +13,17 @@
    <script type="text/javascript" src="JavaScript/Libraries/JsHamcrest/jshamcrest.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/Log4JavaScript/log4javascript.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
-   <script type="text/javascript" src="JavaScript/Libraries/MooTools/mootools-more-1.4.0.1.js"></script>    
+   <script type="text/javascript" src="JavaScript/Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
+       
+   <script type="text/javascript" src="JavaScript/Libraries/Draw2d/draw2d.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/Draw2d/moocanvas.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/Draw2d/wz_jsgraphics.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/Draw2d/package.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/Draw2d/Actor.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/Draw2d/Class.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/Draw2d/InheritanceConnection.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/Draw2d/InheritanceConnectionDecorator.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/Draw2d/InheritancePort.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/MochaUI/Core.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/MochaUI/Dock.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/MochaUI/Layout.js"></script>
@@ -47,6 +57,11 @@
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/UnconfiguredWidgetException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ComponentStateManager/ComponentStateManager.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DiagramWidget/AttributeFigure.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DiagramWidget/DiagramFigure.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DiagramWidget/DiagramFigureFactory.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DiagramWidget/ClassFigure.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DiagramWidget/DiagramWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DocumentEditor/DocumentEditor.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElement.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementEditor.js"></script>
