--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
@@ -78,6 +78,7 @@
    <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessageBus.js"></script>
 
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/DiagramWidgetTest.js"></script>
+   <script type="text/javascript" src="../../ObjectTests/DiagramWidget/DiagramFigureTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/ClassFigureTest.js"></script>
    
    <script type="text/javascript">
