Implement AnnotationFigure based on draw2d.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
@@ -54,6 +54,7 @@
    <script type="text/javascript" src="../../Source/DiagramWidget/AttributeFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/DiagramFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/DiagramFigureFactory.js"></script>
+   <script type="text/javascript" src="../../Source/DiagramWidget/AnnotationFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/ClassFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/DiagramWidget.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
@@ -79,6 +80,7 @@
 
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/DiagramWidgetTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/DiagramFigureTest.js"></script>
+   <script type="text/javascript" src="../../ObjectTests/DiagramWidget/AnnotationFigureTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/ClassFigureTest.js"></script>
    
    <script type="text/javascript">
