--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
@@ -56,7 +56,9 @@
    <script type="text/javascript" src="../../Source/DiagramWidget/DiagramFigureFactory.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/AnnotationFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/ClassFigure.js"></script>
+   <script type="text/javascript" src="../../Source/DiagramWidget/ConnectionFigure.js"></script>
    <script type="text/javascript" src="../../Source/DiagramWidget/DiagramWidget.js"></script>
+   <script type="text/javascript" src="../../Source/DiagramWidget/InheritanceConnectionFigure.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
@@ -82,6 +84,7 @@
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/DiagramFigureTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/AnnotationFigureTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/DiagramWidget/ClassFigureTest.js"></script>
+   <script type="text/javascript" src="../../ObjectTests/DiagramWidget/InheritanceConnectionFigureTest.js"></script>
    
    <script type="text/javascript">
       window.addEvent('domready', function() {
